[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exl-observability"
version = "0.1.0"
description = "Pluggable async observability library: logging, security logging, tracing, metrics, and APM with AWS CloudWatch drivers."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "ARB Platform" }]
keywords = ["observability", "logging", "tracing", "metrics", "apm", "cloudwatch"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "aioboto3>=13.0",
  "boto3>=1.35",
  "opentelemetry-api>=1.29.0,<2",
  "opentelemetry-sdk>=1.29.0,<2",
  "pydantic>=2.10",
  "returns>=0.23",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "ruff>=0.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
src = ["src"]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "ANN"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["returns.contrib.mypy.returns_plugin"]
mypy_path = "src"
packages = ["exl_observability"]

[[tool.mypy.overrides]]
module = "returns.*"
implicit_reexport = true

[[tool.mypy.overrides]]
module = "boto3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "botocore.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "opentelemetry.*"
ignore_missing_imports = true
