[project]
name = "jp-tool"
version = "0.1.0"
description = "UV-managed AWS deployment CLI for Cursor AI agents (Terraform, ECR, Helm)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.13",
  "pydantic-settings>=2.14",
  "returns>=0.28",
  "rich>=15.0",
  "typer>=0.26",
]

[project.scripts]
jp-tool = "jp_tool.cli:main"
jp-tool-build = "jp_tool.build.package:main"
jp-tool-clean = "jp_tool.build.cleanup:main"
jp-tool-install = "jp_tool.build.install:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jp_tool = ["py.typed"]

[dependency-groups]
dev = [
  "mypy>=2.1",
  "pytest>=9.0",
  "ruff>=0.15",
]

[tool.ruff]
src = ["src", "testing"]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN"]

[tool.ruff.lint.per-file-ignores]
"testing/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["testing"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["returns.contrib.mypy.returns_plugin"]
mypy_path = "src"
packages = ["jp_tool"]

[[tool.mypy.overrides]]
module = "returns.*"
implicit_reexport = true
