[project]
name = "tf-tool"
version = "0.1.0"
description = "UV-managed Terraform CLI for Cursor AI agents (plan, validate, and IaC helpers)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28",
  "packaging>=26.2",
  "pydantic>=2.13",
  "returns>=0.28",
  "rich>=15.0",
  "typer>=0.26",
]

[project.scripts]
tf-tool = "tf_tool.cli:main"
tf-tool-build = "tf_tool.build.package:main"
tf-tool-clean = "tf_tool.build.cleanup:main"
tf-tool-install = "tf_tool.build.install:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tf_tool = ["py.typed"]

[dependency-groups]
dev = [
  "mypy>=2.1",
  "pytest>=9.0",
  "ruff>=0.15",
]

[tool.ruff]
src = ["src", "testing"]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN"]

[tool.pytest.ini_options]
testpaths = ["testing"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["returns.contrib.mypy.returns_plugin"]
mypy_path = "src"
packages = ["tf_tool"]

[[tool.mypy.overrides]]
module = "returns.*"
implicit_reexport = true
