[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-testing"
version = "0.1.0"
description = "Unified local and AWS integration tests for pod_manager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.30",
  "httpx>=0.27",
  "pydantic>=2.0",
  "returns>=0.23",
  "router-client",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
]

[project.scripts]
dev-test = "dev_testing.cli:app"

[tool.uv.sources]
router-client = { path = "../router.svc/client_py", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["returns.contrib.mypy.returns_plugin"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ASYNC"]
