[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pod-manager-cli"
version = "0.1.0"
description = "Operator CLI for pod_manager routing control plane (gRPC only)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.0",
  "router-client",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[project.scripts]
pod-manager = "pod_manager_cli.main:app"

[tool.uv.sources]
router-client = { path = "../router.svc/client_py", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
