[project]
name = "file-system-client"
version = "0.1.0"
description = "High-performance text and binary file I/O with Result-based error handling."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.13",
  "returns>=0.28",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
file_system = ["py.typed"]

[dependency-groups]
dev = [
  "mypy>=2.1",
  "pytest>=9.0",
  "ruff>=0.15",
]

[tool.ruff]
src = ["src", "testing"]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN"]

[tool.pytest.ini_options]
testpaths = ["testing"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["returns.contrib.mypy.returns_plugin"]
mypy_path = "src"
packages = ["file_system"]

[[tool.mypy.overrides]]
module = "returns.*"
implicit_reexport = true
