[project]
name = "fortify-workbook-extract"
version = "0.1.0"
description = "Extract ISG/Fortify Developer Workbook PDFs to CSV, JSON, or YAML"
requires-python = ">=3.11"
dependencies = [
    "pypdf==6.10.2",
    "pydantic==2.12.5",
    "PyYAML==6.0.2",
]

[project.scripts]
parse-isg-code-scan-report-tool = "fortify_workbook_tool.runtime:main"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fortify_workbook_tool"]
