[project]
name = "isg-deep-analyzer"
version = "0.1.0"
description = "Deep code-grounded Phase-2 analysis of Fortify ISG Developer Workbook CSV rows"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
isg-deep-analyzer = "isg_deep_analyzer.run_analysis:main"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["isg_deep_analyzer"]
