[project]
name = "isg-list-findings"
version = "0.1.0"
description = "List and summarise Fortify findings from the workbook CSV by priority, owner, or state"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
isg-list-findings = "isg_list_findings.run:main"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["isg_list_findings"]
