[project]
name = "isg-pdf-validate"
version = "0.1.0"
description = "Validate a PDF is a genuine Fortify ISG Developer Workbook before extraction"
requires-python = ">=3.11"
dependencies = [
    "pypdf==6.10.2",
]

[project.scripts]
isg-pdf-validate = "isg_pdf_validate.run:main"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["isg_pdf_validate"]
