[project]
name = "isg-phase2-critical"
version = "0.1.0"
description = "Fill Phase-2 placeholder columns for Fortify Critical-priority rows in the workbook CSV"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
isg-phase2-critical = "isg_phase2_critical.run:main"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["isg_phase2_critical"]
