[project]
name = "isg-phase2-hml"
version = "0.1.0"
description = "Fill Phase-2 placeholder columns for Fortify High / Medium / Low rows in the workbook CSV"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
isg-phase2-hml = "isg_phase2_hml.run:main"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["isg_phase2_hml"]
