[project]
name = "isg-scan-reader"
version = "0.1.0"
description = "Validate and summarise ISG supplementary scan CSV files (container images, IaC, OSS packages) using Pydantic schema enforcement"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.scripts]
isg-scan-reader = "isg_scan_reader.run:main"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["isg_scan_reader"]
