[project]
name = "isg-scratch-clean"
version = "0.1.0"
description = "Delete all files in .cursor/scratch/analysis_log and .cursor/scratch/extracted_files, preserving the directories"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
isg-scratch-clean = "isg_scratch_clean.run:main"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["isg_scratch_clean"]
