[project]
name = "jira-tool"
version = "0.1.0"
description = "AI-agent-facing Jira CLI: create/edit/find tickets, epics, boards, sprints, and users via the Jira REST API (API-key auth)"
requires-python = ">=3.11"
dependencies = [
    "jira>=3.10.5",
    "pydantic>=2.0",
    "requests>=2.32.0",
]

[project.scripts]
jira-tool = "jira_tool.run:main"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jira_tool"]
